--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Nexu_ss Page</title>
 
   </head>
+
+  <header>
+    <h1>Eliaksen Verkkosivu!</h1>
+  </header>
     
   <body>
     
@@ -16,9 +20,13 @@
 
     <p>Olen perustanut DELTAPOINT GAMES indie-peli firman.</p>
 
+    <p>Sivu jatkuu kuvan alla!</p>
+
     <img src="DPGlogoHeader.png" alt="Logo">
 
     <h2>Minun projekteja:</h2>
+
+    <p>Olen tuottanut DELTAPOINT GAMES tiimissä monta eri projektia. Niistä on saatavilla esimerkkejä alla:</p>
 
     <iframe frameborder="0" src="https://itch.io/embed/4129781?bg_color=001837&amp;fg_color=e65af7&amp;link_color=5bebfa&amp;border_color=313949" width="552" height="167"><a href="https://nexu-ss.itch.io/nullos">NullOS DEMO by Nexus, Panu9000, Fencer</a></iframe>
 
