Fixed Image again

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <p>Sivu jatkuu kuvan alla!</p>
 
-    <img src="DPGlogoHeader.png" alt="Logo">
+    <img src="DPGlogo.png" alt="Logo">
 
     <h2>Minun projekteja:</h2>
 
