--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
     <p>Olen perustanut DELTAPOINT GAMES indie-peli firman.</p>
 
+    <p>Minut löytää <a href="www.linkedin.com/in/elias-lunden">Linkedinistä</a> ja <a href="https://deltapointgames.com/">deltapointgames.com</a> sivuilta!</p>
+
+    
+
+    
+
     <p>Sivu jatkuu kuvan alla!</p>
 
     <img src="DPGlogo.png" alt="Logo">
